--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "firebase-admin": "^5.11.0",
+    "jquery": "^3.3.1",
     "jsonwebtoken": "^8.2.0",
     "request": "^2.85.0",
     "rxjs": "^5.5.6",
