--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "jsonwebtoken": "^8.2.0",
     "request": "^2.85.0",
     "rxjs": "^5.5.6",
+    "socket.io": "^2.1.0",
+    "socket.io-client": "^2.1.0",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
