--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@google-cloud/storage": "^1.6.0",
     "angular2-jwt": "^0.2.3",
     "body-parser": "^1.18.2",
     "core-js": "^2.4.1",
@@ -30,6 +31,7 @@
     "firebase-admin": "^5.11.0",
     "jquery": "^3.3.1",
     "jsonwebtoken": "^8.2.0",
+    "multer": "^1.3.0",
     "request": "^2.85.0",
     "rxjs": "^5.5.6",
     "socket.io": "^2.1.0",
