--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "rxjs": "^5.5.6",
     "socket.io": "^2.1.0",
     "socket.io-client": "^2.1.0",
+    "valid-url": "^1.0.9",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
