--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "body-parser": "^1.18.2",
     "core-js": "^2.4.1",
     "cors": "^2.8.4",
+    "dialogflow": "^0.3.0",
     "express": "^4.16.3",
     "firebase-admin": "^5.11.0",
     "jquery": "^3.3.1",
