--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cors": "^2.8.4",
     "dialogflow": "^0.3.0",
     "express": "^4.16.3",
+    "firebase": "^4.13.1",
     "firebase-admin": "^5.11.0",
     "jquery": "^3.3.1",
     "jsonwebtoken": "^8.2.0",
