--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "scripts": {
     "ng": "ng",
     "start": "node index.js",
-    "build": "ng build --prod",
+    "build": "ng build --prod --build-optimizer",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build"
+    "postinstall": "ng build --prod"
   },
   "private": true,
   "dependencies": {
